# OscAgent

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
src/oscagent/: __init__.py  __main__.py  cli.py  config.py  discord_core.py
src/oscagent/actions/: __init__.py  models.py  store.py
src/oscagent/adapters/: discord_bot.py
src/oscagent/agent/: __init__.py  core.py  development.py  trace.py
src/oscagent/llm/: __init__.py  base.py  mock.py  openai_compatible.py  router.py
src/oscagent/memory/: __init__.py  models.py  store.py
src/oscagent/planner/: __init__.py  file_organizer.py  structured.py
src/oscagent/tools/: __init__.py  base.py  development.py  git.py  registry.py  workspace.py
tests/: test_cli.py  test_development_tools.py  test_development_workflow.py  test_discord_core.py  test_file_organizer_planner.py  test_llm_router.py  test_memory_store.py  test_pending_action_store.py  test_phase7_manual_gate.py  test_repo_analysis_agent.py  test_structured_planner.py  test_tool_registry.py  test_workspace_tools.py
