[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oscagent"
version = "0.1.0"
description = "A lightweight Discord-first AI agent runtime for research and coding workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OscAgent Contributors" }
]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]
discord = [
  "discord.py>=2.4"
]
llm = [
  "openai>=1.40",
  "httpx>=0.27"
]

[project.scripts]
oscagent = "oscagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
